--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.6.13-3.7.0-beta.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
