--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "core-js": "^3.8.3",
+    "material-design-icons": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.6.13-3.7.0-beta.0.0"
+    "vuetify": "^3.6.13-3.7.0-beta.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6"
   }
 }
