--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "material-design-icons": "^3.0.1",
     "vue": "^3.2.13",
